# growtho

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/raw/: timecourse.csv
docs/: report.qmd
growtho/: __init__.py  data_preparation.py  inference_configuration.py  investigate.ipynb  prepare_data.py  sample.py  stan_input_functions.py
growtho/stan/: biomass.stan  yield_growth_rate.stan
inferences/first_try/: config.toml
